--- a/css/style.css
+++ b/css/style.css
@@ -1018,3 +1018,33 @@ img.img-content {
     max-width: 100%;
     margin-bottom: 15px;
 }
+
+img.img-visi {
+	width: 640px;
+	height: auto;
+	margin-left: auto;
+	margin-right: auto;
+	display: block;
+	margin-bottom: 15px;
+}
+
+h3.title-misi {
+	font-size: 20px;
+	margin-bottom: 20px;
+}
+
+ul.title-struktur {
+	margin-left: -40px;
+	padding-right: 15px;
+}
+
+ol.angka {
+	margin-left: -15px;
+	padding-right: 15px;
+}
+
+h5.isi-misi {
+	text-align: justify;
+	font-family : "Oswald Light";
+	margin-bottom: 10px;
+}
